; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_bpf.c_filt_bpftouch.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_bpf.c_filt_bpftouch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.knote = type { i32, i32, i64 }
%struct.kevent_internal_s = type { i32, i32 }
%struct.bpf_d = type { i32 }

@bpf_mlock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.knote*, %struct.kevent_internal_s*)* @filt_bpftouch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @filt_bpftouch(%struct.knote* %0, %struct.kevent_internal_s* %1) #0 {
  %3 = alloca %struct.knote*, align 8
  %4 = alloca %struct.kevent_internal_s*, align 8
  %5 = alloca %struct.bpf_d*, align 8
  %6 = alloca i32, align 4
  store %struct.knote* %0, %struct.knote** %3, align 8
  store %struct.kevent_internal_s* %1, %struct.kevent_internal_s** %4, align 8
  %7 = load %struct.knote*, %struct.knote** %3, align 8
  %8 = getelementptr inbounds %struct.knote, %struct.knote* %7, i32 0, i32 2
  %9 = load i64, i64* %8, align 8
  %10 = inttoptr i64 %9 to %struct.bpf_d*
  store %struct.bpf_d* %10, %struct.bpf_d** %5, align 8
  %11 = load i32, i32* @bpf_mlock, align 4
  %12 = call i32 @lck_mtx_lock(i32 %11)
  %13 = load %struct.kevent_internal_s*, %struct.kevent_internal_s** %4, align 8
  %14 = getelementptr inbounds %struct.kevent_internal_s, %struct.kevent_internal_s* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.knote*, %struct.knote** %3, align 8
  %17 = getelementptr inbounds %struct.knote, %struct.knote* %16, i32 0, i32 1
  store i32 %15, i32* %17, align 4
  %18 = load %struct.kevent_internal_s*, %struct.kevent_internal_s** %4, align 8
  %19 = getelementptr inbounds %struct.kevent_internal_s, %struct.kevent_internal_s* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.knote*, %struct.knote** %3, align 8
  %22 = getelementptr inbounds %struct.knote, %struct.knote* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 8
  %23 = load %struct.knote*, %struct.knote** %3, align 8
  %24 = load %struct.bpf_d*, %struct.bpf_d** %5, align 8
  %25 = call i32 @filt_bpfread_common(%struct.knote* %23, %struct.bpf_d* %24)
  store i32 %25, i32* %6, align 4
  %26 = load i32, i32* @bpf_mlock, align 4
  %27 = call i32 @lck_mtx_unlock(i32 %26)
  %28 = load i32, i32* %6, align 4
  ret i32 %28
}

declare dso_local i32 @lck_mtx_lock(i32) #1

declare dso_local i32 @filt_bpfread_common(%struct.knote*, %struct.bpf_d*) #1

declare dso_local i32 @lck_mtx_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
